fix: reduce form label z-index

--- a/src/scss/forms/_forms.scss
+++ b/src/scss/forms/_forms.scss
@@ -46,7 +46,7 @@ fieldset {
     max-width: 100%;
     width: auto;
     padding: 0 $input-spacing-x;
-    z-index: 5;
+    z-index: 2;
     &.active {
       transform: translateY(-85%);
       font-weight: 600;
